@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '8.4'
 }
 
 group = 'pl.com.bottega'
@@ -10,10 +11,26 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.guava:guava:32.1.3-jre'
+    implementation 'commons-io:commons-io:2.15.0'
+    implementation 'org.jsoup:jsoup:1.17.1'
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation("org.slf4j:slf4j-simple:2.0.9")
+    implementation 'net.datafaker:datafaker:1.5.0'
+    testImplementation 'org.assertj:assertj-core:3.21.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
     useJUnitPlatform()
+}
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+tasks.withType(Test) {
+    jvmArgs += '--enable-preview'
+}
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
